2010-04-20  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Avoid possible false negatives in confh5.test.
	* tests/confh5.test: Enable shell `errexit' flag, and bumped
	copyright years.  Due to this change, any unexpected failure
	in calls to $ACLOCAL, $AUTOMAKE, $AUTOCONF or $AUTOHEADER, or
	a failure in grepping expected text in output files should now
	cause the whole test to fail.

2010-04-17  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Fixed typo in POD documentation of Automake::Channels.
	* lib/Automake/Channels.pm: Fixed typo in POD documentation:
	@<...> was used instead of C<...>.

2010-04-14  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Refactor tests on Automake TESTS color output.
	* tests/color.test: Tests using the expect program moved out to...
	* tests/color2.test: ... this new file.
	* tests/Makefile.am (TESTS): Extended accordingly.

2010-04-12  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Fix typos in comments in test confh5.test
	* tests/confh5.test: Fix a couple of typos in comments.

	Avoid possible false negatives in canon-name.test.
	* tests/canon-name.test: Enable shell `errexit' flag.  Improve
	test description.

2010-04-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix per-Makefile.am setting of -Werror.
	Before this patch, 'AUTOMAKE_OPTIONS = -Werror' in one
	Makefile.am would carry over to other Makefile.am files
	treated afterwards by the same thread, causing inconsistent
	and unstable exit status values.
	* lib/Automake/Channels.pm (dup_channel_setup)
	(drop_channel_setup): Save and restore the setting of
	$warnings_are_errors.
	* tests/werror3.test: New test.
	* tests/Makefile.am: Adjust.
	* NEWS: Update.

2010-04-11  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Bugfix in confh5.test w.r.t. Solaris/Heirloom Sh.

	* tests/confh5.test: In the generated Makefile.am: do not use
	`test ! -e FILE' to check for the non-existence of a file, since
	that is not supported by Solarish/Heirloom Sh.
