@@ -1,0 +1,51 @@
+#! /bin/sh
+# Copyright (C) 2010 Free Software Foundation, Inc.
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2, or (at your option)
+# any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+# Diagnose if both configure.in and configure.ac are present, prefer
+# configure.ac.
+
+. ./defs || Exit 1
+
+set -e
+
+cat >configure.ac <<\EOF
+AC_INIT
+AM_INIT_AUTOMAKE([configure], [1.0])
+AC_CONFIG_FILES([Makefile])
+AC_OUTPUT
+EOF
+
+: >Makefile.am
+
+$ACLOCAL 2>stderr && { cat stderr >&2; Exit 1; }
+cat stderr >&2
+grep 'configure.ac.*configure.in.*both present' stderr
+
+$ACLOCAL -Wno-error 2>stderr
+cat stderr >&2
+grep 'configure.ac.*configure.in.*both present' stderr
+grep 'proceeding.*configure.ac' stderr
+
+# Ensure we really proceed with configure.ac.
+AUTOMAKE_fails -Werror
+grep 'configure.ac.*configure.in.*both present' stderr
+grep 'proceeding.*configure.ac' stderr
+
+AUTOMAKE_run 0 -Wno-error
+grep 'configure.ac.*configure.in.*both present' stderr
+grep 'proceeding.*configure.ac' stderr
+
+:
