@@ -1,3 +1,14 @@
+2010-04-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Fix -Werror handling for presence of configure.in and configure.ac.
+	* lib/Automake/Variable.pm (Automake::Variable): Do not initialize
+	$configure_ac at the global level, before command-line arguments
+	have been parsed.
+	(require_variables): Initialize it here.
+	* tests/configure.test: New test.
+	* tests/Makefile.am: Update.
+	Report by Stefano Lattarini.
+
 2010-04-20  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	Avoid possible false negatives in confh5.test.
